--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.91.0",
-    "@types/nodemailer": "^7.0.5",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.27.3",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
+    "mongodb": "^7.0.0",
     "next": "16.1.4",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
@@ -31,10 +31,13 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.5",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "pg": "^8.17.2",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "typescript": "^5"
