--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pg": "^8.17.2",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@netlify/plugin-nextjs": "^5.9.1"
   }
 }
