--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:netlify": "next build && cp -r public/* .next/",
     "start": "next start",
     "lint": "eslint"
   },
