--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.9.1",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
@@ -38,10 +39,10 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "netlify-cli": "^23.13.5",
     "pg": "^8.17.2",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
-    "typescript": "^5",
-    "@netlify/plugin-nextjs": "^5.9.1"
+    "typescript": "^5"
   }
 }
