--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:netlify": "next build && cp -r public/* .next/",
     "start": "next start",
     "lint": "eslint"
   },
@@ -18,29 +17,25 @@
     "framer-motion": "^12.27.3",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
-    "mongodb": "^7.0.0",
     "next": "16.1.4",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.12",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.9.1",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.5",
-    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
-    "netlify-cli": "^23.13.5",
-    "pg": "^8.17.2",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "typescript": "^5"
